--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,17 @@
-<%= render 'form', recipe: @recipe %>
+<h3>Recipe Form:</h3>
+
+<%= form_for @recipe do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+    
+    <%= f.fields_for :ingredients do |i| %>
+        <%= i.label :name %> 
+        <%= i.text_field :name %>
+
+        <%= i.label :quantity %>
+        <%= i.text_field :quantity %>
+    <% end %>
+        
+
+    <%= f.submit %>
+<% end %>
